(executables
 (modes byte exe)
 (names assorted_handlers backtrace_in_handler backtrace_in_handler_loop
   exception_in_handler gc_in_handler gc_in_handler_deep_stack
   many_free_vars_in_handler printf_in_handler probe_in_handler
   probe_is_enabled test comballoc cond_probes raise_in_probe rec_probes
   two_units)
 (libraries str)
 (ocamlopt_flags :standard -O3)
 (preprocess no_preprocessing))

(rule
 (targets assorted_handlers.output)
 (deps ../test_trace.exe assorted_handlers.exe)
 (action
  (bash
    "../test_trace.exe assorted_handlers.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps assorted_handlers.expected assorted_handlers.output)
 (action
  (bash "diff -u assorted_handlers.expected assorted_handlers.output"))
 (alias runtest))

(rule
 (targets backtrace_in_handler.output)
 (deps ../test_trace.exe backtrace_in_handler.exe)
 (action
  (bash
    "../test_trace.exe backtrace_in_handler.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps backtrace_in_handler.expected backtrace_in_handler.output)
 (action
  (bash "diff -u backtrace_in_handler.expected backtrace_in_handler.output"))
 (alias runtest))

(rule
 (targets backtrace_in_handler_loop.output)
 (deps ../test_trace.exe backtrace_in_handler_loop.exe)
 (action
  (bash
    "../test_trace.exe backtrace_in_handler_loop.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps backtrace_in_handler_loop.expected backtrace_in_handler_loop.output)
 (action
  (bash
    "diff -u backtrace_in_handler_loop.expected backtrace_in_handler_loop.output"))
 (alias runtest))

(rule
 (targets exception_in_handler.output)
 (deps ../test_trace.exe exception_in_handler.exe)
 (action
  (bash
    "../test_trace.exe exception_in_handler.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps exception_in_handler.expected exception_in_handler.output)
 (action
  (bash "diff -u exception_in_handler.expected exception_in_handler.output"))
 (alias runtest))

(rule
 (targets gc_in_handler.output)
 (deps ../test_trace.exe gc_in_handler.exe)
 (action
  (bash
    "../test_trace.exe gc_in_handler.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps gc_in_handler.expected gc_in_handler.output)
 (action
  (bash "diff -u gc_in_handler.expected gc_in_handler.output"))
 (alias runtest))

(rule
 (targets gc_in_handler_deep_stack.output)
 (deps ../test_trace.exe gc_in_handler_deep_stack.exe)
 (action
  (bash
    "../test_trace.exe gc_in_handler_deep_stack.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps gc_in_handler_deep_stack.expected gc_in_handler_deep_stack.output)
 (action
  (bash
    "diff -u gc_in_handler_deep_stack.expected gc_in_handler_deep_stack.output"))
 (alias runtest))

(rule
 (targets many_free_vars_in_handler.output)
 (deps ../test_trace.exe many_free_vars_in_handler.exe)
 (action
  (bash
    "../test_trace.exe many_free_vars_in_handler.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps many_free_vars_in_handler.expected many_free_vars_in_handler.output)
 (action
  (bash
    "diff -u many_free_vars_in_handler.expected many_free_vars_in_handler.output"))
 (alias runtest))

(rule
 (targets printf_in_handler.output)
 (deps ../test_trace.exe printf_in_handler.exe)
 (action
  (bash
    "../test_trace.exe printf_in_handler.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps printf_in_handler.expected printf_in_handler.output)
 (action
  (bash "diff -u printf_in_handler.expected printf_in_handler.output"))
 (alias runtest))

(rule
 (targets probe_in_handler.output)
 (deps ../test_trace.exe probe_in_handler.exe)
 (action
  (bash
    "../test_trace.exe probe_in_handler.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps probe_in_handler.expected probe_in_handler.output)
 (action
  (bash "diff -u probe_in_handler.expected probe_in_handler.output"))
 (alias runtest))

(rule
 (targets probe_is_enabled.output)
 (deps ../test_trace.exe probe_is_enabled.exe)
 (action
  (bash
    "../test_trace.exe probe_is_enabled.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps probe_is_enabled.expected probe_is_enabled.output)
 (action
  (bash "diff -u probe_is_enabled.expected probe_is_enabled.output"))
 (alias runtest))

(rule
 (targets test.output)
 (deps ../test_trace.exe test.exe)
 (action
  (bash
    "../test_trace.exe test.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps test.expected test.output)
 (action
  (bash "diff -u test.expected test.output"))
 (alias runtest))

(rule
 (targets comballoc.output)
 (deps ../test_trace.exe comballoc.exe)
 (action
  (bash
    "../test_trace.exe comballoc.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps comballoc.expected comballoc.output)
 (action
  (bash "diff -u comballoc.expected comballoc.output"))
 (alias runtest))

(rule
 (targets cond_probes.output)
 (deps ../test_trace.exe cond_probes.exe)
 (action
  (bash
    "../test_trace.exe cond_probes.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps cond_probes.expected cond_probes.output)
 (action
  (bash "diff -u cond_probes.expected cond_probes.output"))
 (alias runtest))

(rule
 (targets raise_in_probe.output)
 (deps ../test_trace.exe raise_in_probe.exe)
 (action
  (bash
    "../test_trace.exe raise_in_probe.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps raise_in_probe.expected raise_in_probe.output)
 (action
  (bash "diff -u raise_in_probe.expected raise_in_probe.output"))
 (alias runtest))

(rule
 (targets rec_probes.output)
 (deps ../test_trace.exe rec_probes.exe)
 (action
  (bash
    "../test_trace.exe rec_probes.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps rec_probes.expected rec_probes.output)
 (action
  (bash "diff -u rec_probes.expected rec_probes.output"))
 (alias runtest))

(rule
 (targets two_units.output)
 (deps ../test_trace.exe two_units.exe)
 (action
  (bash
    "../test_trace.exe two_units.exe | sed 's/Bin_prefix_assorted_handlers__//' > %{targets}")))

(rule
 (deps two_units.expected two_units.output)
 (action
  (bash "diff -u two_units.expected two_units.output"))
 (alias runtest))
